src/index.css
*{
  box-sizing: border-box
}

body {
  margin-top: 2rem;
  width: 50%;
  margin: auto;
  text-align: center;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: black;
  color: #faf08e;
  font-size: 1rem;
  }

h1 {
  text-align: center;
  margin-top: 2rem; 
  font-size: 2rem;
  }

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.defn{
  margin-top: 2rem;
  margin-left: 2rem;
  text-align: justify;
  width: 80%;
}

.tagline{
  margin-top: 1rem;
}

.choices{
  background-color: black;
  color:#faf08e;
}
ul{
  list-style: none;
}
@media screen and (max-width: 570px){
  body {
      margin: 0px;
      width: 100%;
  }
  h1 {
      font-size: 2em;
      display: block;
      margin-right: 0.3em;
      margin-left: 0.3em;
  }
}

